--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.2",
-    "@tabler/icons-react": "^3.19.0",
+    "@tabler/icons-react": "^3.21.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
+    "lenis": "^1.1.16",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
